<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.dashboard.admin.UserDashboardFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dailyLimitLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/daily_limit"
        app:layout_constraintEnd_toStartOf="@id/ivUpdateDailyLimit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDailyLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ivUpdateDailyLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@id/dailyLimitLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dailyLimitLayout"
        app:layout_constraintTop_toTopOf="@id/dailyLimitLayout" />

    <TextView
        android:id="@+id/tvCalorieListHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/food_entry_list"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btSync"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dailyLimitLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sync"
        app:fabCustomSize="24dp"
        app:layout_constraintBottom_toBottomOf="@id/tvCalorieListHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCalorieListHeader"
        app:layout_constraintTop_toTopOf="@id/tvCalorieListHeader" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_colon"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCalorieListHeader" />

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivEditStartDate"
        app:layout_constraintStart_toEndOf="@+id/tvFrom"
        app:layout_constraintTop_toBottomOf="@id/tvCalorieListHeader"
        tools:text="@tools:sample/date/ddmmyy" />

    <ImageView
        android:id="@+id/ivEditStartDate"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toEndOf="@+id/tvStartDate"
        app:layout_constraintTop_toBottomOf="@id/tvCalorieListHeader"
        app:tint="?colorOnSurface" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_colon"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvEndDate"
        app:layout_constraintTop_toBottomOf="@id/tvCalorieListHeader" />

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivEditEndDate"
        app:layout_constraintTop_toBottomOf="@id/tvCalorieListHeader"
        tools:text="@tools:sample/date/ddmmyy" />

    <ImageView
        android:id="@+id/ivEditEndDate"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_calendar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCalorieListHeader"
        app:tint="?colorOnSurface" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFrom"
        tools:listitem="@layout/food_entry_single_item_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btAddEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>